[tool.poetry]
name = "mastodon-homefeed-rss"
version = "0.4"
description = "generate an RSS feed from a Mastodon home feed"
authors = ["Matthew Newton <matthewn@mahnamahna.net>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
feedgen = "^0.9.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
